# kinect2grabber

./: CMakeLists.txt  LICENSE  README.md
include/: Kinect2Manager.h
src/: Kinect2Manager.cpp  main.cpp
